Don't do redundant flag changes in setItemsFlags

Instead of removing all flags and then adding the requested ones
back, figure out which flags are actually getting added or removed
and only apply those changes.

Everything is still carried out in up to two DB queries.

Additionally, don't send out the change notification if nothing
has actually changed.

BUG:328286
FIXED-IN:1.11.1
REVIEW:114241